Add buttons for the source and the github

--- a/client/examples/example.html
+++ b/client/examples/example.html
@@ -10,6 +10,8 @@
       <piechart name="User" id="piechart" data-dimension="user.screen_name"></piechart>
       <googlemap name="TweetMap" id="map" data-dimension="geo.coordinates.@0,geo.coordinates.@1" ></googlemap>
     </div>
+    <a class="btn btn-default" onclick="window.location='view-source:' + window.location.href;">View Source</a>
+    <a class="btn btn-default" onclick="window.location='https://github.com/spacelis/portraitist2';">Github</a>
     <script data-main="/js/portraitist" src="/lib/requirejs/require.js"></script>
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="/lib/dc.js/dc.css" type="text/css">
